--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/express-session": "^1.18.2",
     "@types/jspdf": "^1.3.3",
+    "@types/react-router-dom": "^5.3.3",
+    "bcrypt": "^6.0.0",
+    "connect-sqlite3": "^0.9.16",
+    "express-session": "^1.18.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "konva": "^9.3.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-konva": "^19.0.7"
+    "react-konva": "^19.0.7",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
