--- a/server/package.json
+++ b/server/package.json
@@ -10,20 +10,24 @@
     "migrate": "ts-node src/scripts/migrate.ts"
   },
   "dependencies": {
+    "@types/express-session": "^1.18.2",
     "@types/uuid": "^10.0.0",
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
+    "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "puppeteer": "^23.10.0",
     "sharp": "^0.34.0",
-    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
@@ -31,7 +35,9 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^24.3.0",
     "@types/puppeteer": "^5.4.7",
+    "knex": "^3.1.0",
     "nodemon": "^3.1.10",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   }
